# SciCon_2023

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  superpoint.cpp  superpoint.hpp  superpoint.tflite  uTensor.lib  utensor_cli.toml
cifar_cnn/: .gitignore  CMakeLists.txt  Makefile  cifar10_cnn.cpp  cifar10_cnn.hpp  cifar10_cnn.pb  main.cpp  params_cifar10_cnn.hpp
python/: CMakeLists.txt  _pyuSuperpoint.cpp
scripts/: superpoint_tf.py
uSuperpoint/: CMakeLists.txt  main.cpp  superpoint.cpp  superpoint.tflite  utensor_cli.toml
