project(uSuperPoint CXX)
cmake_minimum_required(VERSION 3.10)
set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_CXX_STANDARD 11)
find_package(OpenCV REQUIRED)

add_subdirectory(uTensor)
target_compile_options(utensor PRIVATE -fno-rtti)
add_executable(usuperpoint main.cpp superpoint.cpp)
target_link_libraries(usuperpoint PRIVATE utensor PRIVATE ${OpenCV_LIBS})
target_include_directories(usuperpoint PRIVATE ${OpenCV_INCLUDE_DIRS})
target_compile_options(usuperpoint PRIVATE -fno-rtti)
option(PYTHON_BINDING "enable python binding" OFF)

if(PYTHON_BINDING)
    add_subdirectory(pybind11)
    add_subdirectory(python)
endif(PYTHON_BINDING)